--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports.biome": "explicit",
         "source.fixAll.biome": "explicit"
-    }
+    },
+    "cSpell.words": [
+        "cmdk",
+        "turbopack",
+        "vaul"
+    ]
 }
