--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@rc-component/drawer": "^1.2.0",
     "@react-oauth/google": "^0.12.2",
     "@vis.gl/react-google-maps": "^1.5.5",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "rc-drawer": "^7.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swiper": "^12.0.2",
