--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
+    "moment": "^2.30.1",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "rc-drawer": "^7.3.0",
