feat: enhance transit features and UI components
- Added support for transit mode in route planning with new travel mode options.
- Integrated sonner for toast notifications in the UI.
- Improved loading and not found pages with better user feedback.
- Updated RouteCard and TransitDetail components for displaying transit information.
- Enhanced route computation logic to handle transit details and real-time bus information.
- Refactored useMapStore to manage transit-related state and actions.
- Added new API functions for fetching real-time bus data.
- Updated TypeScript types for better type safety and clarity in transit-related data structures.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
     "source.organizeImports.biome": "explicit",
     "source.fixAll.biome": "explicit"
   },
-  "cSpell.words": ["cmdk", "turbopack", "vaul"]
+  "cSpell.words": [
+    "cmdk",
+    "headsign",
+    "turbopack",
+    "vaul"
+  ]
 }
