--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rc-drawer": "^7.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
