--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "rc-drawer": "^7.3.0",
