--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@rc-component/drawer": "^1.2.0",
     "@react-oauth/google": "^0.12.2",
     "@vis.gl/react-google-maps": "^1.5.5",
+    "accept-language": "^3.0.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dompurify": "^3.2.7",
     "html-react-parser": "^5.2.6",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
@@ -40,7 +45,9 @@
     "next-themes": "^0.4.6",
     "rc-drawer": "^7.3.0",
     "react": "19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.0.1",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
