--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
