--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-map-test",
+  "name": "taipei-accessible-frontend",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
@@ -41,12 +41,12 @@
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
     "motion": "^12.23.24",
-    "next": "^15.5.2",
+    "next": "^15.5.5",
     "next-themes": "^0.4.6",
     "rc-drawer": "^7.3.0",
-    "react": "19.1.0",
+    "react": "^19.2.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.0",
     "react-i18next": "^16.0.1",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
