--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@lucide/lab": "^0.1.2",
     "@next/env": "^15.5.2",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collection": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
@@ -48,6 +50,8 @@
     "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.0.1",
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
@@ -55,7 +59,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@biomejs/biome": "^2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.20",
