feat: 新增 @vercel/analytics 套件並整合至應用程式，改善分析功能；調整 AIChatBot 位置，優化佈局；更新 RouteDrawer 以顯示載入狀態；修正 RouteCard 的選擇標籤；優化計算路線的邏輯，避免重複路線；新增 PlaceInput 中的當前位置功能

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@rc-component/drawer": "^1.2.0",
     "@react-oauth/google": "^0.12.2",
+    "@vercel/analytics": "^1.5.0",
     "@vis.gl/react-google-maps": "^1.5.5",
     "accept-language": "^3.0.20",
     "class-variance-authority": "^0.7.1",
