--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.0.1",
     "react-markdown": "^10.1.0",
+    "react-type-animation": "^3.2.0",
     "rehype-sanitize": "^6.0.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
